--- a/Pages/MyWorkExperience.html
+++ b/Pages/MyWorkExperience.html
@@ -33,7 +33,7 @@
                             <h1>Work Experience</h1>
 
 							<div class="box">
-                                <p><strong> I'm Willing to Kick Start My career with an Internship</strong></p>
+                                <p><strong> Willing to Kick Start My career with an Internship</strong></p>
                             </div>
 
 						</div>
