--- a/Pages/MyGalary.html
+++ b/Pages/MyGalary.html
@@ -110,14 +110,15 @@
                                     <li>
                                         <span class="opener">My Projects</span>
                                         <ul>
-                                            <li><a href="WebDevelopment.html">Web Development</a></li>
-                                            <li><a href="Designing.html">Designing</a></li>
-                                            <li><a href="Testing.html">Testing</a></li>
-                                            <li><a href="Java.html">Java</a></li>
-                                            <li><a href="WindowsForm.html">C# Windows Form</a></li>
-                                            <li><a href="ASP.html">ASP.NET</a></li>
-                                            <li><a href="Python.html">Python</a></li>
-                                            <li><a href="ResearchProjects.html">Research Projects</a></li>
+                                            <li><a href="AllProject.html">All Projects</a></li>
+                                            <li><a href="../MyEachProjects/WebDevelopment.html">Web Development</a></li>
+                                            <li><a href="../MyEachProjects/Designing.html">Designing</a></li>
+                                            <li><a href="../MyEachProjects/Testing.html">Testing</a></li>
+                                            <li><a href="../MyEachProjects/Java.html">Java</a></li>
+                                            <li><a href="../MyEachProjects/WindowsForm.html">C# Windows Form</a></li>
+                                            <li><a href="../MyEachProjects/ASP.html">ASP.NET</a></li>
+                                            <li><a href="../MyEachProjects/Python.html">Python</a></li>
+                                            <li><a href="../MyEachProjects/ResearchProjects.html">Research Projects</a></li>
                                         </ul>
                                         <li><a href="MyContact.html">My Details</a></li>
                                         <li>
