--- a/assets/webfonts/SubPages/AAAsamplePageCodeSubPage.html
+++ b/assets/webfonts/SubPages/AAAsamplePageCodeSubPage.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 
 	</head>
 	<body class="is-preload">
@@ -18,7 +18,7 @@
 						<div class="inner">
 
 							<header id="header">
-                                <a href="../index.html" class="logo"><strong>HOME </strong></a>
+                                <a href="/index.html" class="logo"><strong>HOME </strong></a>
                                 <span id="todayDate"></span>
                                 <ul class="icons">
                                     <li><a href="https://github.com/SamMathaniha" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -29,17 +29,11 @@
                                 </ul>
                             </header>
 
-                            <br> <br>
-                            <h1>Work Experience</h1>
-
-							<div class="box">
-                                <p><strong> Willing to Kick Start My career with an Internship</strong></p>
-                            </div>
+							
 
 						</div>
 					</div>
 
-                   
 				<!-- Sidebar -->
                 <div id="sidebar">
                     <div class="inner">
@@ -65,14 +59,14 @@
                                         <span class="opener">My Projects</span>
                                         <ul>
                                             <li><a href="AllProject.html">All Projects</a></li>
-                                            <li><a href="../MyEachProjects/WebDevelopment.html">Web Development</a></li>
-                                            <li><a href="../MyEachProjects/Designing.html">Designing</a></li>
-                                            <li><a href="../MyEachProjects/Testing.html">Testing</a></li>
-                                            <li><a href="../MyEachProjects/Java.html">Java</a></li>
-                                            <li><a href="../MyEachProjects/WindowsForm.html">C# Windows Form</a></li>
-                                            <li><a href="../MyEachProjects/ASP.html">ASP.NET</a></li>
-                                            <li><a href="../MyEachProjects/Python.html">Python</a></li>
-                                            <li><a href="../MyEachProjects/ResearchProjects.html">Research Projects</a></li>
+                                            <li><a href="WebDevelopment.html">Web Development</a></li>
+                                            <li><a href="Designing.html">Designing</a></li>
+                                            <li><a href="Testing.html">Testing</a></li>
+                                            <li><a href="Java.html">Java</a></li>
+                                            <li><a href="WindowsForm.html">C# Windows Form</a></li>
+                                            <li><a href="ASP.html">ASP.NET</a></li>
+                                            <li><a href="Python.html">Python</a></li>
+                                            <li><a href="ResearchProjects.html">Research Projects</a></li>
                                         </ul>
                                         <li><a href="MyContact.html">My Details</a></li>
                                         <li>
