--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 										</header>
 										<p>I am a dedicated, organized and methodical individual. I have good interpersonal skills, am an excellent team worker and am keen and very willing to learn and develop new skills. I am reliable and dependable and often seek new responsibilities within a wide range of employment areas. I have an active and dynamic approach to work and getting things done. I am determined and decisive. I identify and develop opportunities.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More about Me</a></li>
+											<li><a href="./Pages/MyContact.html" class="button big">Learn More about Me</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="./images/HomeArtImage.png" alt="" />
 									</span>
 								</section>
 
@@ -110,7 +110,7 @@
 
 									<div style="text-align: center;">
 										<ul class="actions" style="display: inline-block;">
-											<li><a href="#" class="button big" style="font-size: 1em; width: 600px;">View More Details About My Education</a></li>
+											<li><a href="./Pages/MyEducation.html" class="button big" style="font-size: 1em; width: 600px;">View More Details About My Education</a></li>
 										</ul>
 									</div>
 								</section>
@@ -229,14 +229,15 @@
 										<li>
 											<span class="opener">My Projects</span>
 											<ul>
-												<li><a href="./Pages/WebDevelopment.html">Web Development</a></li>
-												<li><a href="./Pages/Designing.html">Designing</a></li>
-												<li><a href="./Pages/Testing.html">Testing</a></li>
-												<li><a href="./Pages/Java.html">Java</a></li>
-												<li><a href="./Pages/WindowsForm.html">C# Windows Form</a></li>
-												<li><a href="./Pages/ASP.html">ASP.NET</a></li>
-												<li><a href="./Pages/Python.html">Python</a></li>
-												<li><a href="./Pages/ResearchProjects.html">Research Projects</a></li>
+												<li><a href="./Pages/AllProject.html">All Projects</a></li>
+												<li><a href="./MyEachProjects/WebDevelopment.html">Web Development</a></li>
+												<li><a href="./MyEachProjects/Designing.html">Designing</a></li>
+												<li><a href="./MyEachProjects/Testing.html">Testing</a></li>
+												<li><a href="./MyEachProjects/Java.html">Java</a></li>
+												<li><a href="./MyEachProjects/WindowsForm.html">C# Windows Form</a></li>
+												<li><a href="./MyEachProjects/ASP.html">ASP.NET</a></li>
+												<li><a href="./MyEachProjects/Python.html">Python</a></li>
+												<li><a href="./MyEachProjects/ResearchProjects.html">Research Projects</a></li>
 											</ul>
 											<li><a href="./Pages/MyContact.html">My Details</a></li>
 											<li>
