--- a/MyEachProjects/WebDevelopment.html
+++ b/MyEachProjects/WebDevelopment.html
@@ -36,51 +36,22 @@
 							
                             <div class="posts">
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic01.jpg" alt="" /></a>
-                                    <h3>AutoMart Car Traders (C# Windows Form)</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <a href="#" class="image"><img src="../images/GrowellLanka.png" alt="" /></a>
+                                    <h3>Growell Lanka (Web-based System) - Degree Final Project</h3>
+                                    <p>This project is to development the <strong> Smart Service Web-based system for GROWELL Lanka 
+                                        (PVT) LTD</strong>  , which the service provider company located in Sri Lanka. Its a Service-based company, they provide variety of services. Used <strong>HTML, CSS, JavaScript, PHP and Python</strong> to Develop</p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/GrowellLanka.html" class="button" >More Details</a></li>
                                     </ul>
                                 </article>
+
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic02.jpg" alt="" /></a>
-                                    <h3>ABC Car Traders (C# Windows Form)</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                                    <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <a href="#" class="image"><img src="../images/pic03.jpg" alt="" /></a>
-                                    <h3>Growell Lanka (Web-based System)</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                                    <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <a href="#" class="image"><img src="../images/pic04.jpg" alt="" /></a>
-                                    <h3>Raythos Aircraft (ASP.NET) - Group Project</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                                    <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <a href="#" class="image"><img src="../images/pic05.jpg" alt="" /></a>
-                                    <h3>Health Care Plus Hospital (C# Windows Form) </h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                                    <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <a href="#" class="image"><img src="../images/pic06.jpg" alt="" /></a>
+                                    <a href="#" class="image"><img src="../images/Wonder Railway Logo.PNG" alt="" /></a>
                                     <h3>Wonder Railway Management System (Web-based System) - Group Project</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <p>The Wonder Railway Management System project revolutionizes railway operations by optimizing processes, enhancing passenger experiences, empowering administrators, and centralizing employee management. Through real-time tracking, seamless communication, and comprehensive insights, it ensures efficiency, satisfaction, and informed decision-making, redefining modern rail travel.
+                                    </p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/WonderRailway.html" class="button" >More Details</a></li>
                                     </ul>
                                 </article>
                             </div>
@@ -96,10 +67,7 @@
                             
                             <div class="box alt">
                                 <div class="row gtr-50 gtr-uniform">
-                                    <div class="col-4"><a href="../images/ccc.PNG" data-lightbox="gallery"><img src="../images/ccc.PNG" alt="" class="image fit"></a></div>
-                                    <div class="col-4"><a href="../images/pic01.jpg" data-lightbox="gallery"><img src="../images/pic01.jpg" alt="" class="image fit"></a></div>
-                                    <div class="col-4"><a href="../images/pic02.jpg" data-lightbox="gallery"><img src="../images/pic02.jpg" alt="" class="image fit"></a></div>
-                                    <!-- Break -->
+
                                     <div class="col-4"><a href="../images/pic03.jpg" data-lightbox="gallery"><img src="../images/pic03.jpg" alt="" class="image fit"></a></div>
                                     <div class="col-4"><a href="../images/pic01.jpg" data-lightbox="gallery"><img src="../images/pic01.jpg" alt="" class="image fit"></a></div>
                                     <div class="col-4"><a href="../images/pic02.jpg" data-lightbox="gallery"><img src="../images/pic02.jpg" alt="" class="image fit"></a></div>
