--- a/Pages/AllProject.html
+++ b/Pages/AllProject.html
@@ -54,51 +54,56 @@
 
                             <div class="posts">
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic01.jpg" alt="" /></a>
+                                    <a href="#" class="image"><img src="../images/GrowellLanka.png" alt="" /></a>
+                                    <h3>Growell Lanka (Web-based System) - Degree Final Project</h3>
+                                    <p>This project is to development the <strong> Smart Service Web-based system for GROWELL Lanka 
+                                        (PVT) LTD</strong>  , which the service provider company located in Sri Lanka. Its a Service-based company, they provide variety of services. Used <strong>HTML, CSS, JavaScript, PHP and Python</strong> to Develop</p>
+                                    <ul class="actions">
+                                        <li><a href="../MyProjects/GrowellLanka.html" class="button" target="_blank">More Details</a></li>
+                                    </ul>
+                                </article>
+                                <article>
+                                    <a href="#" class="image"><img src="../images/AutoMartCarTraders.PNG" alt="" /></a>
                                     <h3>AutoMart Car Traders (C# Windows Form)</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <p>" AutoMart Car Traders” is offering high-quality vehicles and spare parts through their service centers. Developed a new application to enhance customer experience and streamline their operations.</p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/AutoMartCarTraders.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic02.jpg" alt="" /></a>
+                                    <a href="#" class="image"><img src="../images/ABCcarTraders.PNG" alt="" /></a>
                                     <h3>ABC Car Traders (C# Windows Form)</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <p>"ABC Car Traders"  sales brand new and Used Cars and Car parts. Developed a System for Customers to search for Cars or Parts to place a order and view theie order status with user login and regsitration. In other hand Admin Can manage overall system such as orders, users, cars, parts and report genarating as well. </p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/ABCcarTraders.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
+                                
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic03.jpg" alt="" /></a>
-                                    <h3>Growell Lanka (Web-based System)</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                                    <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <a href="#" class="image"><img src="../images/pic04.jpg" alt="" /></a>
+                                    <a href="#" class="image"><img src="../images/Raythos Aerospace Logo.PNG" alt="" /></a>
                                     <h3>Raythos Aircraft (ASP.NET) - Group Project</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <p>Raythos Aerospace is a aerospace manufacturing company, focusing on digital technology to boost efficiency and innovation.The company is shifting towards a digital platform, enhancing the customer experience in aircraft purchasing with options for customization and real-time tracking.Utilizing data analytics, Raythos Aerospace aims to optimize operational effectiveness and respond swiftly to market trends. 
+                                    </p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/RaythosAircraft.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic05.jpg" alt="" /></a>
+                                    <a href="#" class="image"><img src="../images/HealthCarePlus Logo.PNG" alt="" /></a>
                                     <h3>Health Care Plus Hospital (C# Windows Form) </h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <p>" HealthCare Plus” is a leading hospital that provides comprehensive medical services to patients. They need to develop a new application to enhance patient care, streamline operations, and improve communication between patients and healthcare providers.
+                                    </p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/HealthCarePlus.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
                                 <article>
-                                    <a href="#" class="image"><img src="../images/pic06.jpg" alt="" /></a>
+                                    <a href="#" class="image"><img src="../images/Wonder Railway Logo.PNG" alt="" /></a>
                                     <h3>Wonder Railway Management System (Web-based System) - Group Project</h3>
-                                    <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                    <p>The Wonder Railway Management System project revolutionizes railway operations by optimizing processes, enhancing passenger experiences, empowering administrators, and centralizing employee management. Through real-time tracking, seamless communication, and comprehensive insights, it ensures efficiency, satisfaction, and informed decision-making, redefining modern rail travel.
+                                    </p>
                                     <ul class="actions">
-                                        <li><a href="#" class="button">More Details</a></li>
+                                        <li><a href="../MyProjects/WonderRailway.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
                                 </div>
@@ -111,10 +116,11 @@
                 <div id="sidebar">
                     <div class="inner">
 
-                        <!-- Search -->
+                            <!-- Search -->
                             <section id="search" class="alt">
                                 <form method="post" action="#">
                                     <input type="text" name="query" id="query" placeholder="Search" />
+                                    <div id="searchSuggestions" class="searchSuggestions"></div> <!-- Container for suggestions -->
                                 </form>
                             </section>
 
