--- a/Pages/MyContact.html
+++ b/Pages/MyContact.html
@@ -86,10 +86,11 @@
                 <div id="sidebar">
                     <div class="inner">
 
-                        <!-- Search -->
+                            <!-- Search -->
                             <section id="search" class="alt">
                                 <form method="post" action="#">
                                     <input type="text" name="query" id="query" placeholder="Search" />
+                                    <div id="searchSuggestions" class="searchSuggestions"></div> <!-- Container for suggestions -->
                                 </form>
                             </section>
 
