--- a/Pages/MyEducation.html
+++ b/Pages/MyEducation.html
@@ -119,11 +119,12 @@
                     <div class="inner">
 
                         <!-- Search -->
-                            <section id="search" class="alt">
-                                <form method="post" action="#">
-                                    <input type="text" name="query" id="query" placeholder="Search" />
-                                </form>
-                            </section>
+                        <section id="search" class="alt">
+                            <form method="post" action="#">
+                                <input type="text" name="query" id="query" placeholder="Search" />
+                                <div id="searchSuggestions" class="searchSuggestions"></div> <!-- Container for suggestions -->
+                            </form>
+                        </section>  
 
                         <!-- Menu -->
                             <nav id="menu">
