--- a/Pages/MySkills.html
+++ b/Pages/MySkills.html
@@ -229,14 +229,14 @@
                                         <!-- Sidebar -->
                                                 <div id="sidebar">
                                                     <div class="inner">
-                                
-                                                        <!-- Search -->
-                                                            <section id="search" class="alt">
-                                                                <form method="post" action="#">
-                                                                    <input type="text" name="query" id="query" placeholder="Search" />
-                                                                </form>
-                                                            </section>
-                                
+                                                      <!-- Search -->
+                                                      <section id="search" class="alt">
+                                                        <form method="post" action="#">
+                                                          <input type="text" name="query" id="query" placeholder="Search" />
+                                                          <div id="searchSuggestions" class="searchSuggestions"></div> <!-- Container for suggestions -->
+                                                        </form>
+                                                      </section>
+
                                                         <!-- Menu -->
                                                             <nav id="menu">
                                                                 <header class="major">
