--- a/Pages/MyWorkExperience.html
+++ b/Pages/MyWorkExperience.html
@@ -44,12 +44,13 @@
                 <div id="sidebar">
                     <div class="inner">
 
-                        <!-- Search -->
-                            <section id="search" class="alt">
-                                <form method="post" action="#">
-                                    <input type="text" name="query" id="query" placeholder="Search" />
-                                </form>
-                            </section>
+                       <!-- Search -->
+							<section id="search" class="alt">
+								<form method="post" action="#">
+									<input type="text" name="query" id="query" placeholder="Search" />
+									<div id="searchSuggestions" class="searchSuggestions"></div> <!-- Container for suggestions -->
+								</form>
+							</section>
 
                         <!-- Menu -->
                             <nav id="menu">
@@ -121,6 +122,10 @@
         <script src="../assets/js/main.js"></script>
         <script src="../assets/js/CurrentYear.js" defer></script>
 		<script src="../assets/js/TodayDate.js" defer></script>
+        <script src="assets/js/indexSearchOther.js" defer></script>
+
+
+     
 
 </body>
 </html>
