--- a/index.html
+++ b/index.html
@@ -266,15 +266,15 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="/MyCertificates/Mern stack UOC.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="./MyCertificates/Mern stack UOC.jpg" alt="" /></a>
 											<p>Successfully Completed MERN Full Stack Development in University Of Colombo</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="/images/HND2.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="./images/HND2.jpg" alt="" /></a>
 											<p>HND Graduation in BMICH</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="/images/HCL2.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="./images/HCL2.jpg" alt="" /></a>
 											<p>Industrial Visit To HCLTech</p>
 										</article>
 									</div>
