Updated the index.js

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Degree (Final year) – BEng (Hons) in Software Engineering</h3>
+												<h3 style="color: blue;">Degree – BEng (Hons) in Software Engineering</h3>
 												<p> Sucessfully Completed ( Graduation on 2024 March ). - London Metropoliton University</p>
 												
 											</div>
