Updated the index.js education field

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 											<span class="icon fa-gem"></span>
 											<div class="content">
 												<h3 style="color: blue;">Degree – BEng (Hons) in Software Engineering</h3>
-												<p> Sucessfully Completed ( Graduation on 2024 March ). - London Metropoliton University</p>
+												<p> Sucessfully Completed. - London Metropoliton University</p>
+												
 												
 											</div>
 										</article>
