--- a/Pages/E_Certificates.html
+++ b/Pages/E_Certificates.html
@@ -45,6 +45,7 @@
                 
                             <div class="box alt">
                                 <div class="row gtr-50 gtr-uniform">
+				    <div class="col-4"><a href="../MyCertificates/Mora.PNG" data-lightbox="gallery"><span class="image fit"><img src="../MyCertificates/Mora.PNG" alt="E-certificate" /></span><span class="caption"> 2024.03.28</span></a></div>
                                     <div class="col-4"><a href="../MyCertificates/2024.02.15.PNG" data-lightbox="gallery"><span class="image fit"><img src="../MyCertificates/2024.02.15.PNG" alt="E-certificate" /></span><span class="caption"> 2024.02.15</span></a></div>
                                     <div class="col-4"><a href="../MyCertificates/2023.05.13.PNG" data-lightbox="gallery"><span class="image fit"><img src="../MyCertificates/2023.05.13.PNG" alt="E-certificate" /></span><span class="caption"> 2023.05.13</span></a></div>
                                     <div class="col-4"><a href="../MyCertificates/2023.05.11.PNG" data-lightbox="gallery"><span class="image fit"><img src="../MyCertificates/2023.05.11.PNG" alt="E-certificate" /></span><span class="caption"> 2023.05.11</span></a></div>
