--- a/MyEachProjects/WebDevelopment.html
+++ b/MyEachProjects/WebDevelopment.html
@@ -67,7 +67,7 @@
                             
                             <div class="box alt">
                                 <div class="row gtr-50 gtr-uniform">
-				    <div class="col-4"><a href="../MyCertificates/Mora.PNG" data-lightbox="gallery"><img src="../MyCertificates/2023.04.19.PNG" alt="" class="image fit"></a></div>
+				    <div class="col-4"><a href="../MyCertificates/Mora.PNG" data-lightbox="gallery"><img src="../MyCertificates/Mora.PNG" alt="" class="image fit"></a></div>
                                     <div class="col-4"><a href="../MyCertificates/2023.04.19.PNG" data-lightbox="gallery"><img src="../MyCertificates/2023.04.19.PNG" alt="" class="image fit"></a></div>
                                     <div class="col-4"><a href="../MyCertificates/2023.05.04.PNG" data-lightbox="gallery"><img src="../MyCertificates/2023.05.04.PNG" alt="" class="image fit"></a></div>
                                     <div class="col-4"><a href="../MyCertificates/2023.05.13.PNG" data-lightbox="gallery"><img src="../MyCertificates/2023.05.13.PNG" alt="" class="image fit"></a></div>
