Uploaded new react Project TodoList

--- a/MyEachProjects/React.html
+++ b/MyEachProjects/React.html
@@ -43,6 +43,14 @@
                                         <li><a href="../MyProjects/MyFirstLoginSignupUsingReact.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
+                                <article>
+                                    <a href="#" class="image"><img src="../images/ToDoListReactLogo.png" alt="" /></a>
+                                    <h3>To-Do-List - Using React.js</h3>
+                                    <p> I Discovered the power of React with 'To-Do List' project. From JSX to React Hooks, CSS styling to Controlled Inputs, delve into the world of modern web dev with #JSX #React #CSS #ReactHooks #useState #Props #ControlledInputs </p>
+                                    <ul class="actions">
+                                        <li><a href="../MyProjects/ToDoListReact.html" class="button" target="_blank">More Details</a></li>
+                                    </ul>
+                                </article>
                                
                             </div>
 
