--- a/Pages/MySkills.html
+++ b/Pages/MySkills.html
@@ -267,6 +267,7 @@
                                                                           <li><a href="AllProject.html">All Projects</a></li>
                                                                           <li><a href="../MyEachProjects/WebDevelopment.html">Web Development</a></li>
                                                                           <li><a href="../MyEachProjects/Designing.html">Designing</a></li>
+                                                                          <li><a href="../MyEachProjects/React.html">React</a></li>
                                                                           <li><a href="../MyEachProjects/Testing.html">Testing</a></li>
                                                                           <li><a href="../MyEachProjects/Java.html">Java</a></li>
                                                                           <li><a href="../MyEachProjects/WindowsForm.html">C# Windows Form</a></li>
