--- a/Pages/AllProject.html
+++ b/Pages/AllProject.html
@@ -39,6 +39,7 @@
                                     <option value="">Select</option>
                                     <option value="WebDevelopment">Web Development</option>
                                     <option value="Designing">Desinging</option>
+                                    <option value="React">React</option>
                                     <option value="Testing">Testing</option>
                                     <option value="Java">Java</option>
                                     <option value="WindowsForm">C# Windows Form</option>
@@ -61,6 +62,14 @@
                                         (PVT) LTD</strong>  , which the service provider company located in Sri Lanka. Its a Service-based company, they provide variety of services. Used <strong>HTML, CSS, JavaScript, PHP and Python</strong> to Develop</p>
                                     <ul class="actions">
                                         <li><a href="../MyProjects/GrowellLanka.html" class="button" target="_blank">More Details</a></li>
+                                    </ul>
+                                </article>
+                                <article>
+                                    <a href="#" class="image"><img src="../images/ToDoListReactLogo.png" alt="" /></a>
+                                    <h3>To-Do-List - Using React.js</h3>
+                                    <p> I Discovered the power of React with 'To-Do List' project. From JSX to React Hooks, CSS styling to Controlled Inputs, delve into the world of modern web dev with #JSX #React #CSS #ReactHooks #useState #Props #ControlledInputs </p>
+                                    <ul class="actions">
+                                        <li><a href="../MyProjects/ToDoListReact.html" class="button" target="_blank">More Details</a></li>
                                     </ul>
                                 </article>
                                 <article>
@@ -173,6 +182,7 @@
                                             <li><a href="AllProject.html">All Projects</a></li>
                                             <li><a href="../MyEachProjects/WebDevelopment.html">Web Development</a></li>
                                             <li><a href="../MyEachProjects/Designing.html">Designing</a></li>
+                                            <li><a href="../MyEachProjects/React.html">React</a></li>
                                             <li><a href="../MyEachProjects/Testing.html">Testing</a></li>
                                             <li><a href="../MyEachProjects/Java.html">Java</a></li>
                                             <li><a href="../MyEachProjects/WindowsForm.html">C# Windows Form</a></li>
