Added my degree results in my education

--- a/Pages/MyEducation.html
+++ b/Pages/MyEducation.html
@@ -9,7 +9,7 @@
 		<title>Generic - Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />   <!-- CSS main image editing -->
 
         <style>
            
@@ -54,7 +54,7 @@
                                             University of colombo - school of computing. 
                                              </h4>
                                              This course includes fundamental of MongoDB, Express.js, React.js, Node.js.</p> 
-                                             <button id="MERNCertificateImageButton">View Results Sheet</button>
+                                             <button id="MERNCertificateImageButton">View Certificate</button>
                                              <img id="MERNCertificateImage" src="../MyCertificates/Mern stack UOC.jpg" alt="Results Sheet">
 
 									<hr class="major" />
@@ -64,8 +64,9 @@
                                         <h4>Feb 2023 – Feb 2024  <br>
                                             London Metropolitan University (UK). 
                                              </h4>
-                                             Sucessfully Completed.</p> 
-                                             <button> Results Pending....</button>
+                                             Successfully Completed with First Class Honours standard </p>                               
+                                             <button id="DegreeImageButton">View Confirmed Results</button>
+                                             <img id="DegreeImage" src="../images/FinalYear reults and 1st class .png" alt="Results Sheet">
 
 									<hr class="major" />
 
