--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 											<span class="icon fa-gem"></span>
 											<div class="content">
 												<h3 style="color: blue;">Degree – BEng (Hons) in Software Engineering</h3>
-												<p> Sucessfully Completed - London Metropoliton University</p>
+												<p> Successfully Completed with <strong>First Class Honours </strong> standard  - London Metropolitan University</p>
 												
 												
 											</div>
